# python-boost-astar

./: CMakeLists.txt  PythonInterface.cpp  boost astar example.ipynb  boost_astar.py  main.cpp  setup.py
boost_astar/: __init__.py
