FIND_PACKAGE( Boost 1.40 COMPONENTS graph random REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

ADD_EXECUTABLE( main main.cpp )
ADD_EXECUTABLE( main2 PythonInterface.cpp )

TARGET_LINK_LIBRARIES( main LINK_PUBLIC ${Boost_LIBRARIES} )
TARGET_LINK_LIBRARIES( main2 LINK_PUBLIC ${Boost_LIBRARIES} )